# just-music

./: LICENSE  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme.MD  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
scripts/: test.js
src/: App.css  App.tsx  const.ts  declare.d.ts  declare.ts  index.css  index.less  main.tsx  typings.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: mod.rs  song.rs
src/components/Button/: index.less  index.tsx
src/components/CircularProgressWrapper/: index.tsx
src/components/Detail/: index.less  index.tsx
src/components/LoadMore/: index.tsx
src/components/Login/: index.less  index.tsx
src/components/Modal/: index.tsx  modal.tsx
src/components/PlayListCard/: index.less  index.tsx
src/components/PlayListDetail/: QQ.tsx  index.tsx
src/components/Player/: PlaySort.tsx  Voice.tsx  VoiceBar.tsx  index.tsx
src/components/PlayerPlayList/: index.less  index.tsx
src/components/Progress/: index.tsx
src/components/Search/: index.less  index.tsx
src/components/SkeletonWrapper/: index.tsx
src/components/Tab/: index.tsx
src/components/Tabs/: Tab.tsx  TabPanel.tsx  index.tsx
src/components/navbar/: User.tsx  index.tsx
src/db/: index.ts
src/hooks/: audio.ts  auth.ts  client.ts  data.ts  event.ts  index.ts  modal.tsx  music.ts  theme.ts
src/services/: api.d.ts  auth.ts  index.ts  song.ts  toplist.ts
src/utils/: audio.ts  auth.ts  bem.ts  data.ts  date.ts  http.ts  index.ts  song.ts  tauri.ts  theme.ts
(+24 files in other folders)
