[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.12", features = ["api-all", "devtools"] }
unm_engine = "0.3.0-pre.0"
unm_types = "0.3.0-pre.0"
unm_engine_qq = "0.3.0-pre.1"
unm_engine_migu = "0.3.0-pre.1"
unm_engine_kuwo = "0.3.0-pre.1"
unm_engine_bilibili = "0.3.0-pre.1"
unm_engine_pyncm = "0.3.0-pre.1"
unm_engine_kugou = "0.3.0-pre.1"
unm_engine_ytdl = "0.3.0-pre.1"
unm_api_utils = "0.3.0-pre.1"
futures = "0.3"
mimalloc = "0.1.29"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
